# mse-deep-learning-cg

./: .gitignore  CG MPW completed section 3.ipynb  README.md  cg-linear-regression-section4_completed.ipynb  cgnodes.py  pyproject.toml
computational_graph/: __init__.py  comp_graph.py  core.py
computational_graph/nodes/: __init__.py  add.py  meta.py  multiply.py  square.py  value.py
computational_graph/nodes/arithmetic/: __init__.py  add.py  multiply.py  square.py
computational_graph/nodes/loss/: __init__.py  mse.py
computational_graph/optimizers/: abstract_optimizer.py  adam.py  gradient_descent.py  gradient_descent_optimizer.py  rms_prop.py
computational_graph/visualization/: __init__.py  tikz.py
notebooks/: CG MPW completed section 3.ipynb  cg-linear-regression-section4_completed.ipynb  cgnodes.py  final.ipynb
scripts/: mse.py  simple_graph.py
tests/: test_core.py
tests/nodes/: test_add.py  test_multiply.py  test_square.py  test_value.py
tests/nodes/loss/: test_mse.py
tests/optimizers/: test_adam.py  test_gradient_descent_optimizer.py  test_rms_prop.py
